# tgt

./: .gitignore  Dockerfile  README.md  developer_guide.ipynb  environment.yml  nginx.conf  openssl.cnf  package-lock.json  pyproject.toml  run_tgt.bat  update_tgt.bat
TGT_setup/: docker-compose.yml
backend/: app.py  pyproject.toml
backend/inference/: abstract_worker.py  local_worker.py  processing_options.py  worker.py
backend/inference/glossing/: abstract.py  factory.py  gemini.py  japanese.py  llm.py  portuguese.py  qwen.py
backend/inference/processors/: ColumnCreation.py  abstract.py  abstract_processor.py  example_store.py  factory.py  glossing.py  processor_factory.py  transcription.py  translation.py  transliteration.py
backend/inference/strategies/: abstract_strategy.py  llm_base.py  llm_strategy.py  strategy_factory.py
backend/inference/transcription/: abstract.py  bengali.py  factory.py  thai.py  vietnamese.py  whisper.py  whisperx.py
backend/inference/translation/: abstract.py  bengali.py  deepl.py  factory.py  gemini.py  llm.py  marian.py
backend/inference/transliteration/: abstract.py  bengali.py  default.py  factory.py  indian.py  japanese.py  llm.py  russian.py
backend/materials/: secrets(example).env  secrets.env  token_cache.json
backend/materials/global_variables/: OBLIGATORY_COLUMNS
backend/materials/glossing_rules/: LEIPZIG_GLOSSARY.json
backend/routers/: auth.py
backend/routers/helpers/: job_manager.py  onedrive.py
backend/routers/inference/: inference.py  inference_workers.py  onedrive_worker.py
backend/routers/training/: train.py  train_workers.py
backend/tests/: conftest.py
backend/training/: abstract_worker.py  worker.py
backend/training/data/: UDPreprocessor_ja_H06a.csv
backend/training/preprocessing/: UD.py  abstract.py  factory.py
backend/training/training/: SpacyTrainer.py  abstract.py  factory.py
backend/utils/: csv_to_excel.py  functions.py  llm_functions.py  reorder_columns.py
frontend/src/hooks/: useJobSubmission.ts  useOneDriveAuth.ts  useStreamer.ts  useTrainSubmission.ts
frontend/src/lib/: languages.ts
tests/: test_inference_contract_smoke.py  test_processor_factory_matrix_coverage.py  test_strategy_factory_matrix_coverage.py
tests/integration/: test_real_inference_strategy_runs.py  test_real_processor_factory_matrix.py  test_real_strategy_factory_matrix.py
(+57 files in other folders)
